--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,13 +10,14 @@
   }
 }
 
-html,
+html {
+  max-width: 100vw;
+}
+
 body {
   max-width: 100vw;
-  overflow-x: hidden; 
-  height: auto !important;
-  min-height: 100% !important;
-  overflow-y: auto !important;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -43,4 +44,3 @@ a {
     color-scheme: dark;
   }
 }
-
